views: make comboboxes request focus when clicked

They should behave this way on non-Mac, even in Harmony mode.

BUG=669778

Review-Url: https://codereview.chromium.org/2739893003
Cr-Commit-Position: refs/heads/master@{#456086}

Former-commit-id: a0edc14c6fae6412feb1fabdef2d7e3372cd86dd